Add click to call styling

--- a/css/home-main.css
+++ b/css/home-main.css
@@ -388,3 +388,8 @@ body {
 #email-submit-box {
     margin-left: 20px;
 }
+
+
+div.jsx-3572108039.eactc-main-component.eactc-main-show > div > div.jsx-3139387662.eactc-window-component.eactc-window-show > div:nth-child(3) {
+display: none !important;
+}
