--- a/css/app-main(portrait).css
+++ b/css/app-main(portrait).css
@@ -59,3 +59,7 @@
         margin-top: 0;
     }
 }
+
+div.jsx-3572108039.eactc-main-component.eactc-main-show > div > div.jsx-3139387662.eactc-window-component.eactc-window-show > div:nth-child(3) {
+    display: none !important;
+    }
