--- a/css/home-main(1100).css
+++ b/css/home-main(1100).css
@@ -149,3 +149,7 @@
         color: var(--meco-orange);
     }
     }
+
+    div.jsx-3572108039.eactc-main-component.eactc-main-show > div > div.jsx-3139387662.eactc-window-component.eactc-window-show > div:nth-child(3) {
+        display: none !important;
+        }
