click to call script

--- a/css/about-main.css
+++ b/css/about-main.css
@@ -109,3 +109,6 @@
     width: 300px;
     height: 300px;
 }
+div.jsx-3572108039.eactc-main-component.eactc-main-show > div > div.jsx-3139387662.eactc-window-component.eactc-window-show > div:nth-child(3) > a {
+    display: none !important;
+    }
