--- a/css/app-main.css
+++ b/css/app-main.css
@@ -390,3 +390,7 @@ body {
     0% {opacity: 0; transform: translateX(-100px);}
     100% {opacity: 1; transform: translateX(0px);}
 }
+
+div.jsx-3572108039.eactc-main-component.eactc-main-show > div > div.jsx-3139387662.eactc-window-component.eactc-window-show > div:nth-child(3) {
+    display: none !important;
+    }
