--- a/css/about-main.css
+++ b/css/about-main.css
@@ -50,9 +50,9 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    padding: 100px 50px;
+    padding-top: 100px;
 }
 
 .value {
@@ -83,32 +83,22 @@
 #mission-body,
 #vision-body {
     width: 100%;
-    padding: 150px 0;
+    padding-top: 100px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
 }
 
-#section-quote-mission {
-    margin-top: 50px;
+#vision-body {
+    padding-bottom: 100px;
 }
 
-#section-quote-vision {
+#section-quote-vision,
+#section-quote-mission {
     margin-bottom: 50px;
 }
 
-#section-image-mission::before {
-    content: '';
-    position: absolute;
-    top: 40px;
-    left: 40px;
-    background-image: url(../images/patterns/arrow-blue-pattern.svg);
-    background-size: 150px;
-    box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.5);
-    width: 300px;
-    height: 300px;
-}
 div.jsx-3572108039.eactc-main-component.eactc-main-show > div > div.jsx-3139387662.eactc-window-component.eactc-window-show > div:nth-child(3) > a {
     display: none !important;
-    }
+}
