--- a/css/footer.css
+++ b/css/footer.css
@@ -40,6 +40,7 @@
 }
 
 #copyright-notice a {
+    font-weight: 500;
     color: var(--meco-white);
     box-shadow: none;
     transition: box-shadow 0.1s;
