--- a/css/app-main.css
+++ b/css/app-main.css
@@ -391,6 +391,6 @@ body {
     100% {opacity: 1; transform: translateX(0px);}
 }
 
-div.jsx-3572108039.eactc-main-component.eactc-main-show > div > div.jsx-3139387662.eactc-window-component.eactc-window-show > div:nth-child(3) {
+div.jsx-2682647539.eactc-main-component.eactc-main-show > div > div.jsx-1664092181.eactc-window-component.eactc-window-show > div:nth-child(3) > a {
     display: none !important;
 }
