--- a/css/service-main.css
+++ b/css/service-main.css
@@ -52,6 +52,6 @@ body {
     margin-top: 50px;
 }
 
-div.jsx-3572108039.eactc-main-component.eactc-main-show > div > div.jsx-3139387662.eactc-window-component.eactc-window-show > div:nth-child(3) {
+div.jsx-2682647539.eactc-main-component.eactc-main-show > div > div.jsx-1664092181.eactc-window-component.eactc-window-show > div:nth-child(3) > a {
     display: none !important;
 }
