--- a/css/floating-phone.css
+++ b/css/floating-phone.css
@@ -91,6 +91,7 @@
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
     cursor: pointer;
+    box-shadow: var(--meco-white) 0 0 0 2px;
 }
 
 #floating-phone-icon::after {
