--- a/css/service-main.css
+++ b/css/service-main.css
@@ -36,6 +36,7 @@ body {
 .section-title {
     color: var(--meco-blue-dark);
     margin-bottom: 50px;
+    font-size: 40px;
 }
 
 .section-description {
